tests/print_bad_arg_type.stderr
tests/print_bad_arg_type.hop:3:8: error: HOP2004: type mismatch: cannot use expression of type const_int as &str
